updated meta tags and index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Kyle Vitayanuvatti">
     <title>FastRewards - Sign In</title>
     <link rel="stylesheet" href="sign-up.css" />
+    <!-- URL:   -->
   </head>
   <body>
     <header class="top-header">
