--- a/sign-up.html
+++ b/sign-up.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Kyle Vitayanuvatti">
     <title>FastRewards - Sign Up</title>
     <link rel="stylesheet" href="sign-up.css" />
   </head>
@@ -108,7 +109,7 @@
         <button class="google-button">Continue with Google</button>
 
         <p class="signin-link">
-          Have an account? <a href="sign-in.html">Sign In</a>
+          Have an account? <a href="index.html">Sign In</a>
         </p>
       </section>
     </main>
