--- a/rewards.html
+++ b/rewards.html
@@ -138,15 +138,35 @@
                 4500 Pts
               </div>
             </div>
-            <!-- 3 placeholder boxes to the right -->
-            <div class="col-md-3">
-              <div class="placeholder-box"></div>
+            <div class="col-md-3 mb-3">
+              <div class="current-points-card">
+                <img
+                  src="assets/chipotle.png"
+                  alt="Chipotle Logo"
+                  class="brand-logo"
+                />
+                300 Pts
+              </div>
             </div>
-            <div class="col-md-3">
-              <div class="placeholder-box"></div>
+            <div class="col-md-3 mb-3">
+              <div class="current-points-card">
+                <img
+                  src="assets/starbucks.png"
+                  alt="Starbucks Logo"
+                  class="brand-logo"
+                />
+                2500 Pts
+              </div>
             </div>
-            <div class="col-md-3">
-              <div class="placeholder-box"></div>
+            <div class="col-md-3 mb-3">
+              <div class="current-points-card">
+                <img
+                  src="assets/wawa.png"
+                  alt="Wawa Logo"
+                  class="brand-logo"
+                />
+                500 Pts
+              </div>
             </div>
           </div>
 
