--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Kyle Vitayanuvatti">
     <title>FastRewards - Sign In</title>
     <link rel="stylesheet" href="sign-up.css" />
-    <!-- URL:   -->
+    <!-- URL:  https://cs4640.cs.virginia.edu/ghf3ky/sprint2/index.html -->
   </head>
   <body>
     <header class="top-header">
